[gd_scene load_steps=9 format=2]

[ext_resource path="res://GrabberHolder.gd" type="Script" id=1]
[ext_resource path="res://assets/images/grabber1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/grabber2.png" type="Texture" id=3]
[ext_resource path="res://Grabber.gd" type="Script" id=4]
[ext_resource path="res://assets/images/chain.png" type="Texture" id=5]
[ext_resource path="res://assets/images/crate.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "grab",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "no_grab",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 91, 69 )

[node name="Grabber" type="Node2D"]
script = ExtResource( 1 )

[node name="Grabber" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "grab"
offset = Vector2( 0, -8 )
script = ExtResource( 4 )

[node name="Chain" type="Node2D" parent="Grabber"]
editor/display_folded = true
position = Vector2( 0, -8 )

[node name="Sprite" type="Sprite" parent="Grabber/Chain"]
position = Vector2( 1, -253 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 6, 480 )

[node name="DummyCrate" type="Sprite" parent="Grabber"]
visible = false
texture = ExtResource( 6 )
offset = Vector2( 0.5, 0.5 )

[node name="CrateDetector" type="Area2D" parent="."]
position = Vector2( 0, -8 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrateDetector"]
position = Vector2( 0, 69 )
shape = SubResource( 2 )
[connection signal="body_entered" from="CrateDetector" to="Grabber" method="_on_CrateDetector_body_entered"]
[connection signal="body_exited" from="CrateDetector" to="Grabber" method="_on_CrateDetector_body_exited"]
